fix nail background z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1100,6 +1100,7 @@ h4  {
   height: 60vw;
   max-height: 700px;
   width: 100%;
+  z-index: -1;
 }
 .bg-mask {
   margin-top: -40vw;
